Lagging and hanging, no scrollbar problem fixed

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,8 +11,10 @@
     font-family: Poppins, Open Sans, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-html{
+html {
     scroll-behavior: smooth;
+    overflow: -moz-scrollbars-vertical;
+    overflow-y: scroll;
 }
 
 // creating a custom selection 
@@ -21,7 +23,7 @@ html{
     background-color: #282828;
 }
 
-.width-full{
+.width-full {
     width: 100%;
 
 }
@@ -30,13 +32,16 @@ html{
 ::-webkit-scrollbar {
     width: 6px;
 }
+
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
+
 ::-webkit-scrollbar-thumb {
     background: #805AD5;
     border-radius: 10px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
     background: #333333;
 }
@@ -45,38 +50,41 @@ html{
     filter: drop-shadow('0px 0px 10px #f9c307');
 }
 
-#root>div:nth-child(2)>div.css-ca4rva>div>div>div.carousel.carousel-slider>ul>li{
+#root>div:nth-child(2)>div.css-ca4rva>div>div>div.carousel.carousel-slider>ul>li {
     background-color: #3d3d3d;
 }
-#root>div:nth-child(2)>div.css-ca4rva>div>div>div.carousel.carousel-slider>ul>li.dot.selected{
+
+#root>div:nth-child(2)>div.css-ca4rva>div>div>div.carousel.carousel-slider>ul>li.dot.selected {
     background-color: #2c2c2c;
 }
 
-#root>div:nth-child(2)>div.css-ca4rva>div>div>div.carousel.carousel-slider>button.control-arrow.control-next{
+#root>div:nth-child(2)>div.css-ca4rva>div>div>div.carousel.carousel-slider>button.control-arrow.control-next {
     background-color: #4f4f4f;
-        height: fit-content;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 25px;
-        position: absolute;
-        opacity: 1;
+    height: fit-content;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 25px;
+    position: absolute;
+    opacity: 1;
 }
-#root>div:nth-child(2)>div.css-ca4rva>div>div>div.carousel.carousel-slider>button.control-arrow.control-prev{
+
+#root>div:nth-child(2)>div.css-ca4rva>div>div>div.carousel.carousel-slider>button.control-arrow.control-prev {
     background-color: #4f4f4f;
-        height: fit-content;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 25px;
-        position: absolute;
-        opacity: 1;
+    height: fit-content;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 25px;
+    position: absolute;
+    opacity: 1;
 }
-#root>div.css-ca4rva>div>div>div.carousel.carousel-slider>button.control-arrow:hover{
+
+#root>div.css-ca4rva>div>div>div.carousel.carousel-slider>button.control-arrow:hover {
     background-color: #2c2c2c;
 }
 
 
-.hover-underline{
-    &:hover{
+.hover-underline {
+    &:hover {
         text-decoration: underline;
     }
 }
